--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "element-ui": "^2.15.3",
+    "socket.io-client": "^4.1.3",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
